# to_do_project

./: .gitignore  Cargo.toml  docker-compose.yaml  package-lock.json
backend/: Cargo.toml
backend/src/: app_state.rs  lib.rs  main.rs  router.rs
backend/src/database/: tasks.rs  users.rs
backend/src/middleware/: mod.rs  require_authentication.rs
backend/src/queries/: mod.rs  task_queries.rs  user_queries.rs
backend/src/routes/: hello_world.rs  mod.rs
backend/src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_tasks.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
backend/src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
backend/src/utilities/: app_error.rs  hash.rs  jwt.rs  mod.rs  token_wrapper.rs
frontend/: package-lock.json  package.json
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/hello/: +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.server.ts  +page.svelte
frontend/src/routes/tasks/: +page.server.ts  +page.svelte
integration-tests/backend-tests/: api.test.js  knexfile.js  package-lock.json  package.json
