[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.12", features = ["macros", "headers"] }
bcrypt = "0.14.0"
chrono = "0.4.24"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.11.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_with = "2.3.1"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
